# pseudo_file_manager

./: .gitignore  pyproject.toml
file_manager/: app.py  main.py  storable_factory.py  storage.py
file_manager/data_types/: storable.py
googledrive_cli/: app.py  exceptions.py  main.py  naming_service.py  response.py  storage.py
googledrive_cli/client/: requestor.py
googledrive_cli/data_types/: storable.py
googledrive_cli/server/: authenticator.py  config.py  googledrive.py
googledrive_cli/server/db/: __init__.py  database.db  db.py
tests/: test_composite_pattern.py
