[tool.poetry]
name = "googledrive_cli"
version = "0.1.0"
description = ""
authors = ["DaniilMP3 <daniilpurisov390@gmail.com>"]
readme = "README.md"
packages = [{include = "googledrive_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
cmd2 = "^2.4.3"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
main = "googledrive_cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
