[tool.poetry]
name = "file_manager"
version = "0.1.0"
description = ""
authors = ["DaniilMP3 <daniilpurisov390@gmail.com>"]
readme = "README.md"
packages = [{include = "file_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
cmd2 = "^2.4.3"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
main = "file_manager.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
